# learnopengl

./: .gitignore  CMakeLists.txt  LearnOpenGL.sln  README.md  Shader.cpp  Shader.h  Texture.cpp  learnopengl.sln  main.cpp
LearnOpenGL/: LearnOpenGL.aps  LearnOpenGL.vcxproj  LearnOpenGL.vcxproj.filters  Shader.h  Texture.h  glad.c  main.cpp  vertex.vert
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
include/glad/: glad.h
includes/glad/: glad.h
learnopengl/: learnopengl.vcxproj  learnopengl.vcxproj.filters
learnopengl/src/: Main.cpp
lib/GLFW/: glfw3.lib
shader/: shader.frag  shader.vert
src/: glad.c
